# oom

./: .gitignore  .oom.prcs_aux  AUTHORS  CMakeLists.txt  ChangeLog  Doxyfile.in  NEWS  README  README.de  README.effects-rack  README.instruments  README.ladspaguis  README.shortcuts  README.softsynth  README.translate  SECURITY  all.h  compile_oom.sh  config.h.in  oom.prj  oom.pro  pch.txt
awl/: CMakeLists.txt  aslider.cpp  aslider.h  awl.cpp  awl.h  awlplugin.cpp  awlplugin.h  checkbox.cpp  checkbox.h  clock.xpm  combobox.cpp  combobox.h  drawbar.cpp  drawbar.h  fastlog.h  floatentry.cpp  floatentry.h  knob.cpp  knob.h  ltest.cpp  metronom.xpm  midimeter.cpp  midimeter.h  midimslider.cpp  midimslider.h  midipanentry.cpp  midipanentry.h  midipanknob.cpp  midipanknob.h  midivolentry.cpp  midivolentry.h  mslider.cpp  mslider.h  panentry.cpp  panentry.h  panknob.cpp  panknob.h  pitchedit.cpp  pitchedit.h  pitchlabel.cpp  (+23 more)
dependencies/lilvbundle/: CMakeLists.txt
dependencies/sordbundle/: CMakeLists.txt
oom/: AbstractMidiEditor.cpp  AbstractMidiEditor.h  AddRemoveTrackCommand.cpp  AddRemoveTrackCommand.h  CMakeLists.txt  FadeCurve.cpp  FadeCurve.h  NameValidator.cpp  NameValidator.h  TrackManager.cpp  TrackManager.h  app.cpp  app.cpp.orig  app.h  appearance.cpp  appearance.h  audio.cpp  audio.h  audioconvert.cpp  audioconvert.h  audioprefetch.cpp  audioprefetch.h  audiotrack.cpp  ccinfo.cpp  ccinfo.h  cobject.cpp  cobject.h  conf.cpp  conf.h  confmport.cpp  confmport.h  cserver.cpp  cserver.h  cthread.cpp  cthread.h  ctrl.cpp  ctrl.h  debug.h  default_click.h  device.h  (+122 more)
oom/Composer/: CMakeLists.txt  CanvasNavigator.cpp  CanvasNavigator.h  Composer.cpp  Composer.h  ComposerCanvas.cpp  ComposerCanvas.h  HeaderList.cpp  HeaderList.h  headerlist.cpp  pcanvas.cpp  tlist.cpp  tlist.h
oom/arranger/: CMakeLists.txt  alayout.cpp  alayout.h  arranger.cpp  arranger.h  headerlist.cpp  headerlist.h  pcanvas.cpp  pcanvas.h  tlist.cpp  tlist.h  trackautomationview.cpp
oom/cliplist/: CMakeLists.txt  cliplist.cpp  cliplist.h
oom/ctrl/: CMakeLists.txt  ResizeHandle.cpp  ResizeHandle.h  ctrlcanvas.cpp  ctrlcanvas.h  ctrledit.cpp  ctrledit.h  ctrlpanel.cpp  ctrlpanel.h
oom/driver/: CMakeLists.txt  alsamidi.cpp  alsamidi.h  alsatimer.cpp  alsatimer.h  audiodev.h  dummyaudio.cpp  jack.cpp  jackaudio.h  jackmidi.cpp  jackmidi.h  rtctimer.cpp  rtctimer.h  timerdev.h
oom/images/: frame_bottom.xcf  frame_top.xcf  knob.xcf  menu_titles.xcf
oom/instruments/: CMakeLists.txt  ccontrolbase.ui  editinstrument.cpp  editinstrument.h  editinstrumentbase.ui  importbase.ui  importinstruments.cpp  importinstruments.h  midictrledit.cpp  midictrledit.h  minstrument.cpp  minstrument.h
oom/liste/: CMakeLists.txt  editctrlbase.ui  editevent.cpp  editevent.h  listedit.cpp  listedit.h
oom/marker/: CMakeLists.txt  marker.cpp  marker.h  markerview.cpp  markerview.h
oom/master/: CMakeLists.txt  lmaster.cpp  lmaster.h  master.cpp  master.h  masteredit.cpp  masteredit.h  tscale.cpp  tscale.h
oom/midiedit/: CMakeLists.txt  EventCanvas.cpp  EventCanvas.h  Performer.cpp  Performer.h  PerformerCanvas.cpp  PerformerCanvas.h  Piano.cpp  Piano.h  cmd.h  dcanvas.cpp  dcanvas.h  dlist.cpp  dlist.h  drumedit.cpp  drumedit.h  drummap.cpp  drummap.h  ecanvas.cpp  ecanvas.h  piano.cpp  piano.h  pianoroll.cpp  pianoroll.h  prcanvas.cpp  prcanvas.h  quantconfig.cpp  quantconfig.h
oom/mixer/: AudioMixer.cpp  AudioMixer.h  CMakeLists.txt  amixer.cpp  amixer.h  astrip.cpp  astrip.h  auxknob.cpp  auxknob.h  meter.cpp  meter.h  mstrip.cpp  mstrip.h  panknob.cpp  panknob.h  rack.cpp  rack.h  routedialog.cpp  routedialog.h  routedialogbase.ui  strip.cpp  strip.h
oom/mplugins/: CMakeLists.txt  midifilter.ui  midifilterimpl.cpp  midifilterimpl.h  midiitransform.cpp  midiitransform.h  mitplugin.cpp  mitplugin.h  mittranspose.cpp  mittranspose.h  mrconfig.cpp  mrconfig.h  mrconfigbase.ui  random.cpp  random.h  rhythm.cpp  rhythm.h  rhythmbase.ui
oom/network/: CMakeLists.txt  LSThread.cpp  LSThread.h  lsclient.cpp  lsclient.h  samplertest.cpp  samplertest.h
oom/plugin_includes/: lv2_state.h
oom/remote/: CMakeLists.txt  pyapi.cpp  pyapi.h
oom/traverso_shared/: AddRemoveCtrlValues.cpp  AddRemoveCtrlValues.h  CommandGroup.cpp  CommandGroup.h  OOMCommand.cpp  OOMCommand.h  TConfig.cpp  TConfig.h
oom/waveedit/: CMakeLists.txt  editgain.cpp  editgain.h  editgainbase.ui  waveedit.cpp  waveedit.h  waveview.cpp  waveview.h
oom/widgets/: AudioClipList.cpp  AudioClipList.h  AudioClipListBase.ui  AutomationMenu.cpp  AutomationMenu.h  BookmarkList.cpp  CMakeLists.txt  Conductor.cpp  Conductor.h  ConductorBase.ui  CreateTrackDialog.cpp  CreateTrackDialog.h  DoubleSlider.cpp  DoubleSlider.h  EffectRack.cpp  StretchDialog.cpp  StretchDialog.h  TempoCanvas.cpp  TempoCanvas.h  TempoHeader.cpp  TempoHeader.h  TimeHeader.cpp  TimeHeader.h  TrackEffects.cpp  TrackEffects.h  TrackInstrumentMenu.cpp  TrackInstrumentMenu.h  TrackManager.cpp  TrackManager.h  aboutbox.ui  aboutbox_impl.cpp  action.h  apconfig.cpp  apconfig.h  apconfigbase.ui  appearancebase.ui  bigtime.cpp  bigtime.h  canvas.cpp  canvas.h  (+216 more)
oostudio/: CMakeLists.txt  DownloadProgressDialogBase.ui  OOClient.cpp  OOClient.h  OODownload.cpp  OODownload.h  OOExtract.cpp  OOExtract.h  OOProcess.cpp  OOProcess.h  OOStructures.h  OOStudio.cpp  OOStudio.h  OOStudioBase.ui  OOThread.cpp  OOThread.h  main.cpp  oostudio.html  oostudio.xml  studio.qrc  style.qss
packaging/: CMakeLists.txt  oom.desktop.in  oom.xml  oom_mdk.spec
patchcanvas/: CMakeLists.txt  PatchCanvas.pro  canvasbezierline.cpp  canvasbezierline.h  canvasbezierlinemov.cpp  canvasbezierlinemov.h  canvasbox.cpp  canvasbox.h  canvasboxshadow.cpp  canvasboxshadow.h  canvasfadeanimation.cpp  canvasfadeanimation.h  canvasicon.cpp  canvasicon.h  canvasline.cpp  canvasline.h  canvaslinemov.cpp  canvaslinemov.h  canvasport.cpp  canvasport.h  canvasportglow.cpp  canvasportglow.h  canvastestapp.cpp  canvastestapp.h  canvastestapp.ui  patchcanvas-api.h  patchcanvas.cpp  patchcanvas.h  patchscene.cpp  patchscene.h  theme.cpp  theme.h
(+461 files in other folders)
